--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 		<title>Liam Doyle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="images/favicon-code.ico" rel="icon" type="image/x-icon">
+		<meta charset="UTF-8">
+		<meta name="description" content="My name is Liam Doyle and I am a junior developer from Brisbane. This is my portfolio, feel free to browse through my previous work.">
+		<meta name="keywords" content="Liam, Doyle, junior, web, developer, Brisbane, portfolio">
+		<meta name="author" content="Liam Doyle">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link href="images/favicon-code.ico" rel="icon" type="image/x-icon">
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
