--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Liam Doyle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href="images/favicon-code.ico" rel="icon" type="image/x-icon">
+		<link href="images/favicon.ico" rel="icon" type="image/x-icon">
 		<meta charset="UTF-8">
 		<meta name="description" content="My name is Liam Doyle and I am a junior developer from Brisbane. This is my portfolio, feel free to browse through my previous work.">
 		<meta name="keywords" content="Liam, Doyle, junior, web, developer, Brisbane, portfolio">
